# mermaid_render

./: .gitignore  Cargo.toml  Makefile  README.md  prepare_assets.sh  setup_assets.sh  tauri.conf.json
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/lib/: clipboard.js  store.js
frontend/src/lib/components/: Editor.svelte  Header.svelte  Preview.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
src/: main.rs  mmdc_wrapper.js  package.json
