[package]
name = "mermaid_render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rust-embed = "8.0"
tempfile = "3.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri]
version = "1.3.0"
features = ["shell-open", "dialog-save"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
